--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "typescript": "^5.3.3"
   }
