--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.0.0",
     "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.6.4",
     "react": "^18.2.0",
